tests/variant_flow/flow_field_switch_place_treated_as_top.err.expected
error: at 6:17: [VF-SwitchArmFalselyUnreachable] In function 'f', block 'entry': switchEnum arm for variant 'Some' claims unreachable but variant is reachable at this point
   |
 6 |                 switchEnum(s.o) [None: n, Some: dead]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
