tests/variant_flow/flow_field_switch_place_treated_as_top.sim

            enum Option: Copy + Drop { None: unit Some: i64 }
            struct S { o: Option }
            fn f(s: S) {
              entry:
                switchEnum(s.o) [None: n, Some: dead]
              n: return
              dead: unreachable
            }
            